--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ textarea { width:100%; min-height:96px; padding:10px; resize:vertical; border: 2
 .btn { text-decoration: none; padding:0; border:none; border-radius:20px; box-sizing: border-box; background:none; cursor:pointer; display: flex; align-items: center;}
 .btn_img { border: none; }
 .btn:active { transform: translateY(1px); }
-.btn.lang { border: 1px solid #ccc; padding: 4px 12px; gap: 4px;}
+.btn.lang { color:#000; border: 1px solid #ccc; padding: 4px 12px; gap: 4px;}
 .btn.primary { border: 2px solid #ae4a74; background:#ae4a74; color:#fff; padding: 3px 40px; gap: 5px;}
 .btn.clear { border: 2px solid #ae4a74; color:#ae4a74; padding: 3px 20px; }
 .btn.danger { border-color:#ef4444; color:#ef4444; }
