--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ details summary { cursor:pointer; }
 .lang-block h4 { margin:0 0 6px; font-size:.9rem; display:flex; justify-content:space-between; }
 .hl { font-weight:600; }
 .actions { display:flex; gap:8px; flex-wrap:wrap; }
-.notice { background:#fff7ed; border:1px solid #fed7aa; color:#9a3412; padding:10px; border-radius:10px; }
+.notice { font-size:.9rem; background:#fff; color:#ae4a74; padding:10px; border-radius:10px; }
 .other { padding-top: 10px; display: flex; flex-direction: column; gap: 8px; padding-left: 15px;}
 </style>
 </head>
